# ai_test

./: .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release-drafter.yml  test.yml
application/: pyproject.toml
application/application/: models.py  urls.py
application/application/migrations/: 0001_initial.py
application/application/templates/: about.html  about_us.html  contact.html  contact_list.html  display_file.html  file_list.html  home.html  login.html  logout.html  process_form.html  protected.html  register.html  registered_users.html  sample_template.html  service.html  success.html  template.html  upload.html  upload_file.html  user_list.html
application/application/tests/: conftest.py
application/application/tests/views/: test_health_check.py
application/application/views/: about_us.py  form.py  forms.py  submit.py  view.py  views.py
application/application/views/common/: health_check.py
application/project/: conf.py  constant.py  environment_variables.py
application/project/middleware/: logging.py  slack.py
application/project/settings/: base.py  cloud.py  local.py
application/project/urls/: base.py  local.py
containers/django/: Dockerfile  entrypoint.sh
containers/nginx/: Dockerfile  nginx.conf
